@@ -269,6 +269,7 @@ Jeff Breidenbach (jab)
 Jim Carroll (Jimm)
 Joeri Melis
 Jonas Lihnell (Roze)
+Jonas Kölker
 Josef Reidinger (qk)
 Joshua Hudson
 Laurent Birtz
