@@ -52,6 +52,7 @@ Version 1.3.1+svn:
     * Show total amount of visible villages.
     * The numeric pad Enter key should now behave exactly like Return.
     * added drag & drop to move units
+    * mousewheel scroll vertically but horizontally if alt is pressed
   * Language and translations
     * Updated translations: Bulgarian, Czech, Danish, Dutch, French, German,
       Greek, Hungarian, Italian, Norwegian, Portuguese (Brazil).
