@@ -97,6 +97,7 @@ Version 1.3.1+svn:
    * added the "ignore all" option to continue observing during massive OOS
    * show total amount of visible villages (patch #698)
    * added drag & drop to move units
+   * mousewheel scroll vertically but horizontally if alt is pressed
  * WML tools and scripts:
    * Reorganized: these now live in data/tools/
    * The Perl random map generator (unmaintained since 2003, only
